--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,4 +5,6 @@
     <color name="colorAccent">#D81B60</color>
     <color name="black">#14030A</color>
     <color name="yellow">#F3E117</color>
+    <color name="gray">#E0D6C3</color>
+    <color name="purple">#8A0CC9</color>
 </resources>
